fixed unnecessary scrollbars (#29)

--- a/src/app/boards/boards.component.scss
+++ b/src/app/boards/boards.component.scss
@@ -27,5 +27,6 @@ div.dashboard-card-scrolling-layer {
   left: 15px;
   right: 15px;
   bottom: 15px;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
